org/omp4j/grammar/OMPParser.java
// Generated from OMP.g4 by ANTLR 4.4
package org.omp4j.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OMPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, OMP=5, PARALLEL=6, FOR=7, SECTIONS=8, 
		SECTION=9, SINGLE=10, MASTER=11, BARRIER=12, ATOMIC=13, CRITICAL=14, OMPTHREADNUM=15, 
		OMPNUMTHREADS=16, PUBLIC=17, PRIVATE=18, FIRSTPRIVATE=19, SCHEDULE=20, 
		THREAD_NUM=21, VAR=22, FULLNAME=23, NUMBER=24, WS=25;
	public static final String[] tokenNames = {
		"<INVALID>", "')'", "'.'", "','", "'('", "'omp'", "'parallel'", "'for'", 
		"'sections'", "'section'", "'single'", "'master'", "'barrier'", "'atomic'", 
		"'critical'", "'OMP_THREAD_NUM'", "'OMP_NUM_THREADS'", "'public'", "'private'", 
		"'firstprivate'", "'schedule'", "'threadNum'", "VAR", "FULLNAME", "NUMBER", 
		"WS"
	};
	public static final int
		RULE_ompUnit = 0, RULE_ompParallel = 1, RULE_ompParallelModifiers = 2, 
		RULE_ompParallelModifier = 3, RULE_ompParallelFor = 4, RULE_ompParallelForModifiers = 5, 
		RULE_ompParallelForModifier = 6, RULE_ompSections = 7, RULE_sectionsModifiers = 8, 
		RULE_sectionsModifier = 9, RULE_ompFor = 10, RULE_ompSection = 11, RULE_ompSingle = 12, 
		RULE_ompMaster = 13, RULE_ompBarrier = 14, RULE_ompAtomic = 15, RULE_ompCritical = 16, 
		RULE_ompThreadNum = 17, RULE_ompNumThreads = 18, RULE_ompPublic = 19, 
		RULE_ompPrivate = 20, RULE_ompFirstPrivate = 21, RULE_ompSchedule = 22, 
		RULE_threadNum = 23, RULE_ompAccessModifier = 24, RULE_ompVars = 25, RULE_ompVar = 26, 
		RULE_ompNumber = 27;
	public static final String[] ruleNames = {
		"ompUnit", "ompParallel", "ompParallelModifiers", "ompParallelModifier", 
		"ompParallelFor", "ompParallelForModifiers", "ompParallelForModifier", 
		"ompSections", "sectionsModifiers", "sectionsModifier", "ompFor", "ompSection", 
		"ompSingle", "ompMaster", "ompBarrier", "ompAtomic", "ompCritical", "ompThreadNum", 
		"ompNumThreads", "ompPublic", "ompPrivate", "ompFirstPrivate", "ompSchedule", 
		"threadNum", "ompAccessModifier", "ompVars", "ompVar", "ompNumber"
	};

	@Override
	public String getGrammarFileName() { return "OMP.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OMPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class OmpUnitContext extends ParserRuleContext {
		public OmpParallelContext ompParallel() {
			return getRuleContext(OmpParallelContext.class,0);
		}
		public OmpNumThreadsContext ompNumThreads() {
			return getRuleContext(OmpNumThreadsContext.class,0);
		}
		public OmpSectionContext ompSection() {
			return getRuleContext(OmpSectionContext.class,0);
		}
		public TerminalNode OMP() { return getToken(OMPParser.OMP, 0); }
		public OmpCriticalContext ompCritical() {
			return getRuleContext(OmpCriticalContext.class,0);
		}
		public OmpParallelForContext ompParallelFor() {
			return getRuleContext(OmpParallelForContext.class,0);
		}
		public TerminalNode EOF() { return getToken(OMPParser.EOF, 0); }
		public OmpSectionsContext ompSections() {
			return getRuleContext(OmpSectionsContext.class,0);
		}
		public OmpThreadNumContext ompThreadNum() {
			return getRuleContext(OmpThreadNumContext.class,0);
		}
		public OmpForContext ompFor() {
			return getRuleContext(OmpForContext.class,0);
		}
		public OmpSingleContext ompSingle() {
			return getRuleContext(OmpSingleContext.class,0);
		}
		public OmpMasterContext ompMaster() {
			return getRuleContext(OmpMasterContext.class,0);
		}
		public OmpBarrierContext ompBarrier() {
			return getRuleContext(OmpBarrierContext.class,0);
		}
		public OmpAtomicContext ompAtomic() {
			return getRuleContext(OmpAtomicContext.class,0);
		}
		public OmpUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpUnitContext ompUnit() throws RecognitionException {
		OmpUnitContext _localctx = new OmpUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ompUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); match(OMP);
			setState(69);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(57); ompParallel();
				}
				break;
			case 2:
				{
				setState(58); ompParallelFor();
				}
				break;
			case 3:
				{
				setState(59); ompFor();
				}
				break;
			case 4:
				{
				setState(60); ompSections();
				}
				break;
			case 5:
				{
				setState(61); ompSection();
				}
				break;
			case 6:
				{
				setState(62); ompSingle();
				}
				break;
			case 7:
				{
				setState(63); ompMaster();
				}
				break;
			case 8:
				{
				setState(64); ompBarrier();
				}
				break;
			case 9:
				{
				setState(65); ompAtomic();
				}
				break;
			case 10:
				{
				setState(66); ompCritical();
				}
				break;
			case 11:
				{
				setState(67); ompThreadNum();
				}
				break;
			case 12:
				{
				setState(68); ompNumThreads();
				}
				break;
			}
			setState(71); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpParallelContext extends ParserRuleContext {
		public static java.util.HashSet<String> names;
		public OmpParallelModifiersContext ompParallelModifiers() {
			return getRuleContext(OmpParallelModifiersContext.class,0);
		}
		public TerminalNode PARALLEL() { return getToken(OMPParser.PARALLEL, 0); }
		public OmpParallelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompParallel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpParallel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpParallel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpParallel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpParallelContext ompParallel() throws RecognitionException {
		OmpParallelContext _localctx = new OmpParallelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ompParallel);

		        OmpParallelContext.names = new java.util.HashSet<String>();
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); match(PARALLEL);
			setState(74); ompParallelModifiers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpParallelModifiersContext extends ParserRuleContext {
		public OmpParallelModifierContext ompParallelModifier() {
			return getRuleContext(OmpParallelModifierContext.class,0);
		}
		public OmpParallelModifiersContext ompParallelModifiers() {
			return getRuleContext(OmpParallelModifiersContext.class,0);
		}
		public OmpParallelModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompParallelModifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpParallelModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpParallelModifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpParallelModifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpParallelModifiersContext ompParallelModifiers() throws RecognitionException {
		OmpParallelModifiersContext _localctx = new OmpParallelModifiersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ompParallelModifiers);
		try {
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76); ompParallelModifier();
				setState(77); ompParallelModifiers();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpParallelModifierContext extends ParserRuleContext {
		public ThreadNumContext threadNum() {
			return getRuleContext(ThreadNumContext.class,0);
		}
		public OmpAccessModifierContext ompAccessModifier() {
			return getRuleContext(OmpAccessModifierContext.class,0);
		}
		public OmpScheduleContext ompSchedule() {
			return getRuleContext(OmpScheduleContext.class,0);
		}
		public OmpParallelModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompParallelModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpParallelModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpParallelModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpParallelModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpParallelModifierContext ompParallelModifier() throws RecognitionException {
		OmpParallelModifierContext _localctx = new OmpParallelModifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ompParallelModifier);
		try {
			setState(91);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				if (!(!((OmpParallelContext)getInvokingContext(1)).names.contains("schedule"))) throw new FailedPredicateException(this, "!$ompParallel::names.contains(\"schedule\")");
				setState(83); ompSchedule();
				((OmpParallelContext)getInvokingContext(1)).names.add("schedule");
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				if (!(!((OmpParallelContext)getInvokingContext(1)).names.contains("threadNum"))) throw new FailedPredicateException(this, "!$ompParallel::names.contains(\"threadNum\")");
				setState(87); threadNum();
				((OmpParallelContext)getInvokingContext(1)).names.add("threadNum");
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90); ompAccessModifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpParallelForContext extends ParserRuleContext {
		public static java.util.HashSet<String> names;
		public TerminalNode FOR() { return getToken(OMPParser.FOR, 0); }
		public TerminalNode PARALLEL() { return getToken(OMPParser.PARALLEL, 0); }
		public OmpParallelForModifiersContext ompParallelForModifiers() {
			return getRuleContext(OmpParallelForModifiersContext.class,0);
		}
		public OmpParallelForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompParallelFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpParallelFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpParallelFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpParallelFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpParallelForContext ompParallelFor() throws RecognitionException {
		OmpParallelForContext _localctx = new OmpParallelForContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ompParallelFor);

		        OmpParallelForContext.names = new java.util.HashSet<String>();
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(PARALLEL);
			setState(94); match(FOR);
			setState(95); ompParallelForModifiers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpParallelForModifiersContext extends ParserRuleContext {
		public OmpParallelForModifierContext ompParallelForModifier() {
			return getRuleContext(OmpParallelForModifierContext.class,0);
		}
		public OmpParallelForModifiersContext ompParallelForModifiers() {
			return getRuleContext(OmpParallelForModifiersContext.class,0);
		}
		public OmpParallelForModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompParallelForModifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpParallelForModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpParallelForModifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpParallelForModifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpParallelForModifiersContext ompParallelForModifiers() throws RecognitionException {
		OmpParallelForModifiersContext _localctx = new OmpParallelForModifiersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ompParallelForModifiers);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				if (!(((OmpParallelForContext)getInvokingContext(4)).names.size() < 3)) throw new FailedPredicateException(this, "$ompParallelFor::names.size() < 3");
				setState(98); ompParallelForModifier();
				setState(99); ompParallelForModifiers();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				if (!(((OmpParallelForContext)getInvokingContext(4)).names.size() <= 3)) throw new FailedPredicateException(this, "$ompParallelFor::names.size() <= 3");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpParallelForModifierContext extends ParserRuleContext {
		public ThreadNumContext threadNum() {
			return getRuleContext(ThreadNumContext.class,0);
		}
		public OmpAccessModifierContext ompAccessModifier() {
			return getRuleContext(OmpAccessModifierContext.class,0);
		}
		public OmpScheduleContext ompSchedule() {
			return getRuleContext(OmpScheduleContext.class,0);
		}
		public OmpParallelForModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompParallelForModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpParallelForModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpParallelForModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpParallelForModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpParallelForModifierContext ompParallelForModifier() throws RecognitionException {
		OmpParallelForModifierContext _localctx = new OmpParallelForModifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ompParallelForModifier);
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				if (!(!((OmpParallelForContext)getInvokingContext(4)).names.contains("schedule"))) throw new FailedPredicateException(this, "!$ompParallelFor::names.contains(\"schedule\")");
				setState(105); ompSchedule();
				((OmpParallelForContext)getInvokingContext(4)).names.add("schedule");
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				if (!(!((OmpParallelForContext)getInvokingContext(4)).names.contains("threadNum"))) throw new FailedPredicateException(this, "!$ompParallelFor::names.contains(\"threadNum\")");
				setState(109); threadNum();
				((OmpParallelForContext)getInvokingContext(4)).names.add("threadNum");
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112); ompAccessModifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpSectionsContext extends ParserRuleContext {
		public static java.util.HashSet<String> names;
		public SectionsModifiersContext sectionsModifiers() {
			return getRuleContext(SectionsModifiersContext.class,0);
		}
		public TerminalNode SECTIONS() { return getToken(OMPParser.SECTIONS, 0); }
		public OmpSectionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompSections; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpSections(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpSections(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpSections(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmpSectionsContext ompSections() throws RecognitionException {
		OmpSectionsContext _localctx = new OmpSectionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ompSections);

		        OmpSectionsContext.names = new java.util.HashSet<String>();
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(SECTIONS);
			setState(116); sectionsModifiers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionsModifiersContext extends ParserRuleContext {
		public SectionsModifiersContext sectionsModifiers() {
			return getRuleContext(SectionsModifiersContext.class,0);
		}
		public SectionsModifierContext sectionsModifier() {
			return getRuleContext(SectionsModifierContext.class,0);
		}
		public SectionsModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionsModifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterSectionsModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitSectionsModifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitSectionsModifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionsModifiersContext sectionsModifiers() throws RecognitionException {
		SectionsModifiersContext _localctx = new SectionsModifiersContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sectionsModifiers);
		try {
			setState(123);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				if (!(((OmpSectionsContext)getInvokingContext(7)).names.size() < 2)) throw new FailedPredicateException(this, "$ompSections::names.size() < 2");
				setState(119); sectionsModifier();
				setState(120); sectionsModifiers();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				if (!(((OmpSectionsContext)getInvokingContext(7)).names.size() <= 2)) throw new FailedPredicateException(this, "$ompSections::names.size() <= 2");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionsModifierContext extends ParserRuleContext {
		public ThreadNumContext threadNum() {
			return getRuleContext(ThreadNumContext.class,0);
		}
		public OmpScheduleContext ompSchedule() {
			return getRuleContext(OmpScheduleContext.class,0);
		}
		public SectionsModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionsModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterSectionsModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitSectionsModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitSectionsModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionsModifierContext sectionsModifier() throws RecognitionException {
		SectionsModifierContext _localctx = new SectionsModifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sectionsModifier);
		try {
			setState(133);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				if (!(!((OmpSectionsContext)getInvokingContext(7)).names.contains("schedule"))) throw new FailedPredicateException(this, "!$ompSections::names.contains(\"schedule\")");
				setState(126); ompSchedule();
				((OmpSectionsContext)getInvokingContext(7)).names.add("schedule");
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				if (!(!((OmpSectionsContext)getInvokingContext(7)).names.contains("threadNum"))) throw new FailedPredicateException(this, "!$ompSections::names.contains(\"threadNum\")");
				setState(130); threadNum();
				((OmpSectionsContext)getInvokingContext(7)).names.add("threadNum");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmpForContext extends ParserRuleContext {
		public OmpAccessModifierContext ompAccessModifier(int i) {
			return getRuleContext(OmpAccessModifierContext.class,i);
		}
		public List<OmpAccessModifierContext> ompAccessModifier() {
			return getRuleContexts(OmpAccessModifierContext.class);
		}
		public TerminalNode FOR() { return getToken(OMPParser.FOR, 0); }
		public OmpForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ompFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).enterOmpFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OMPListener ) ((OMPListener)listener).exitOmpFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OMPVisitor ) return ((OMPVisitor<? extends T>)visitor).visitOmpFor(this);
			else return visitor.visitChildren(this);
		}
	}
